--- a/config.properties
+++ b/config.properties
@@ -1,10 +1,10 @@
 #Configurações da Agenda de Contatos
-#Tue Nov 18 19:49:49 GMT-03:00 2025
+#Tue Nov 18 20:56:45 GMT-03:00 2025
 mysql.pass=
 mysql.url=jdbc\:mysql\://localhost\:3306/db_agenda_de_contatos
 mysql.user=root
 storage.type=sqlite
-ui.theme.background=\#2C3E50
+ui.theme.background=\#FF00FF
 ui.theme.button=\#f0ad4e
-ui.theme.font=\#ECF0F1
+ui.theme.font=\#8A2BE2
 ui.theme.sidebar=\#8A2BE2
