Style(theme): Adição da cor #895129

--- a/config.properties
+++ b/config.properties
@@ -1,10 +1,10 @@
 #Configurações da Agenda de Contatos
-#Mon Nov 17 21:18:54 GMT-03:00 2025
+#Tue Nov 18 20:58:41 GMT-03:00 2025
 mysql.pass=
 mysql.url=jdbc\:mysql\://localhost\:3306/db_agenda_de_contatos
 mysql.user=root
 storage.type=sqlite
-ui.theme.background=\#3C3F41
-ui.theme.button=\#4A89F3
-ui.theme.font=\#FFFFFF
+ui.theme.background=\#2C3E50
+ui.theme.button=\#895129
+ui.theme.font=\#895129
 ui.theme.sidebar=\#3C3F41
