--- a/config.properties
+++ b/config.properties
@@ -1,10 +1,10 @@
 #Configurações da Agenda de Contatos
-#Mon Nov 17 21:18:54 GMT-03:00 2025
+#Wed Nov 19 21:18:10 GMT-03:00 2025
 mysql.pass=
 mysql.url=jdbc\:mysql\://localhost\:3306/db_agenda_de_contatos
 mysql.user=root
 storage.type=sqlite
-ui.theme.background=\#3C3F41
-ui.theme.button=\#4A89F3
-ui.theme.font=\#FFFFFF
-ui.theme.sidebar=\#3C3F41
+ui.theme.background=\#8A2BE2
+ui.theme.button=\#FF00FF
+ui.theme.font=\#ECF0F1
+ui.theme.sidebar=\#FF00FF
