--- a/config.properties
+++ b/config.properties
@@ -1,10 +1,10 @@
-#ConfiguraÃ§Ãµes da Agenda de Contatos
-#Tue Nov 18 19:18:19 GMT-03:00 2025
+#Configurações da Agenda de Contatos
+#Wed Nov 19 21:34:49 GMT-03:00 2025
 mysql.pass=
 mysql.url=jdbc\:mysql\://localhost\:3306/db_agenda_de_contatos
 mysql.user=root
 storage.type=sqlite
-ui.theme.background=\#2C3E50
+ui.theme.background=\#000000
 ui.theme.button=\#f0ad4e
-ui.theme.font=\#ECF0F1
+ui.theme.font=\#FFFFFF
 ui.theme.sidebar=\#2C3E50
