--- a/config.properties
+++ b/config.properties
@@ -1,10 +1,10 @@
-#Configuraï¿½ï¿½es da Agenda de Contatos
-#Wed Nov 19 21:18:10 GMT-03:00 2025
+#Configurações da Agenda de Contatos
+#Fri Nov 21 19:15:47 GMT-03:00 2025
 mysql.pass=
 mysql.url=jdbc\:mysql\://localhost\:3306/db_agenda_de_contatos
 mysql.user=root
 storage.type=sqlite
 ui.theme.background=\#8A2BE2
-ui.theme.button=\#FF00FF
+ui.theme.button=\#f0ad4e
 ui.theme.font=\#ECF0F1
-ui.theme.sidebar=\#FF00FF
+ui.theme.sidebar=\#8A2BE2
