--- a/config.properties
+++ b/config.properties
@@ -1,10 +1,10 @@
 #Configurações da Agenda de Contatos
-#Mon Nov 17 21:18:54 GMT-03:00 2025
+#Mon Nov 24 20:27:09 GMT-03:00 2025
 mysql.pass=
 mysql.url=jdbc\:mysql\://localhost\:3306/db_agenda_de_contatos
 mysql.user=root
 storage.type=sqlite
-ui.theme.background=\#3C3F41
-ui.theme.button=\#4A89F3
-ui.theme.font=\#FFFFFF
-ui.theme.sidebar=\#3C3F41
+ui.theme.background=\#4B0082
+ui.theme.button=\#4B0082
+ui.theme.font=\#4B0082
+ui.theme.sidebar=\#4B0082
