--- a/config.properties
+++ b/config.properties
@@ -1,10 +1,10 @@
-#Configuraï¿½ï¿½es da Agenda de Contatos
-#Wed Nov 19 21:18:10 GMT-03:00 2025
+#Configurações da Agenda de Contatos
+#Tue Nov 25 19:05:18 GMT-03:00 2025
 mysql.pass=
 mysql.url=jdbc\:mysql\://localhost\:3306/db_agenda_de_contatos
 mysql.user=root
 storage.type=sqlite
-ui.theme.background=\#8A2BE2
+ui.theme.background=\#2C3E50
 ui.theme.button=\#FF00FF
 ui.theme.font=\#ECF0F1
 ui.theme.sidebar=\#FF00FF
