--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>agenda_de_contatos</groupId>
     <artifactId>gerenciador-de-contatos</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>vls-agenda-de-contatos</name>
+    <name>gerenciador-de-contatos</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -122,7 +122,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                agenda_de_contatos.vlsagendadecontatos/agenda_de_contatos.MainApplication
+                                agenda_de_contatos.MainApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
